# revision-notes

./: 1.simplest_chatbot.py  2.llm_math_chain.py  README.md  app.py  main.py  pyproject.toml  requirements.txt
chatbot/: local_llama_app.py
langchain_venv/: pyvenv.cfg
langchain_venv/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
notebooks/: knowledge_graph.ipynb
pages/: 0_📊_probability_&_statistics.py  1_🤖_ml_fundamentals.py  2_📈_statistical_tests_workbook.py  3_📃_sql_workbook.py  sql_workbook.md  sql_workbook.py
src/agents/: data_understanding_agent.py  ingestion_agent.py
src/pipeline/: a2a_layer.py
