[project]
name = "llm-reliability-and-evaluation-lab"
version = "0.1.0"
description = "This is an ML automation agent, that automates classical ML steps with explanations."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastparquet>=2025.12.0",
    "langgraph>=1.0.6",
    "loguru>=0.7.3",
    "numpy>=2.4.1",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
